# feh-sim-seed

./: Cargo.toml  README.md  index.html
src/: banner.rs  goal.rs  lib.rs  results.rs  sim.rs  subpages.rs  weighted_choice.rs
src/results/: svg_graph.rs
src/subpages/: about.md  changelog.md  help.md
